# windows-xc-network-library

./: .gitignore  ChangeLog  LICENSE  Makefile.am  NOTES  README  README.md  THANKS  configure.ac  xc_netlib.sh
src/: Makefile.am  constructors.c  destructors.c  netlib.c  netlib.h
tests/: build.sh  clean.sh  test1.c
